--- a/scss/all.scss
+++ b/scss/all.scss
@@ -8,7 +8,6 @@
 // Then add additional custom code here
 // // Custom.scss
 
-
 // Option B: Include parts of bootstrap5
 
 // 1. Include functions first (so you can manipulate colors, SVGs, calc, etc)
@@ -84,279 +83,4 @@
 @import "pages/promotions";
 @import "pages/account";
 
-::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
-  color: #BEBEBE !important;
-  opacity: 1; /* Firefox */
-}
-
-.form-control:focus{
-  border: 1px solid $primary !important;
-}
-.input-suffix-text{
-  position: absolute;
-    right: 5px;
-    background: #fff;
-    height: 34px;
-    top: 5px;
-    border: 1px solid $primary;
-    color: $primary;
-    border-radius: 4px !important;
-    z-index: 10;
-}
-.btn-lin{
-  background-image: linear-gradient(54deg, #8C5F06 0%, #B48018 100%) !important;
-  &:active{
-    background: $primary !important;
-  }
-}
-.offcanvas-header{
-  position: relative;
-  &:after{
-    content: '';
-    background: #e3e3e3;
-    position: absolute;
-    width: 78px;
-    height: 4px;
-    top: -13px;
-    right: 50%;
-    transform: translateX(50%);
-    border-radius: 100px;
-  }
-  .offcanvas-title{
-    color: #343434;
-  }
-
-  
-}
-
-.form-switch{
-  padding: 0 !important;
-  padding-right: 2.5rem !important;
-}
-.form-check .form-check-input{
-  float: right;
-  margin-left: 0;
-  margin-right: -2.5rem;
-  transform: translateY(2px);
-  background-color: #ebebeb;
-  border: none !important;
-  &.radio-input{
-    background-color: $primary;
-  }
-}
-.form-switch .form-check-input:checked{
-  background-color: #f1dcb7;
-}
-
-.offcanvas-body,.light-gray-btns{
-  .btn-gray{
-    background: #F8F8F8;
-    color: #2E2E2E;
-    border: 1px solid transparent;
-  }
-  .btn-gray.text-info:hover{
-    background: transparent linear-gradient(43deg, #8C5F06 0%, #B48018 100%) 0% 0% no-repeat padding-box;
-    color: #fff !important;
-  }
-}
-.tooltip-inner{
-  background: $black;
-  color: $white;
-}
-.bs-tooltip-end .tooltip-arrow::before{
-  border-right-color: $black;
-}
-input:-webkit-autofill{
-    -webkit-box-shadow: 0 0 0 30px #F5F5F5 inset;
-}
-.form-label{
-  margin-bottom: 2px;
-  margin-left: 2px;
-  color: #2E2E2E;
-  span{
-    color: red;
-  }
-}
-.invalid-feedback{
-  font-size: 12px;
-  color: red;
-}
-.custom-header{
-  height: 40px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  &.custom-header-has-bg{
-    background-image: url('../img/account-bg.svg');
-  }
-  h2{
-    color: #333;
-  }
-  .back-icon{
-    position: absolute;
-    left: 16px;
-    
-  }
-  .icon-right{
-    position: absolute;
-    right: 16px;
-  }
-  .message-icon{
-    width: 24px;
-    height: 24px;
-    background-image: url('../img/msg_icon.png');
-    background-size: contain;
-    position: relative;
-    &.has-msg::after{
-      content: '';
-      position: absolute;
-      width: 8px;
-      height: 8px;
-      border: 1px solid #fff;
-      background: #E63838;
-      border-radius: 100px;
-      right: 1px;
-      top: 1px;
-    }
-  }
-}
-.fs-14{
-  font-size: 14px;
-}
-.card{
-  box-shadow: 0px 3px 6px #8C5F0633;
-  border: none;
-  border-radius: 0.5rem;
-}
-.card-body{
-  padding: 1rem;
-  .col-3.px-2.col-form-label{
-    padding-left: 0px !important;
-    color: #4A4A4A !important;
-  }
-  .recharge-type-btn{
-    width: 152px;
-    height: 60px;
-    &.atm-recharge-icon{
-      background-image: url('../img/atm-recharge-icon.svg');
-      &.active{
-        background-image: url('../img/atm-recharge-icon-active.svg');
-      }
-    }
-    &.store-recharge-icon{
-      background-image: url('../img/store-recharge-icon.svg');
-      &.active{
-        background-image: url('../img/store-recharge-icon-active.svg');
-      }
-    }
-  }
-  .store-btn{
-    width: 75px;
-    height: 40px;
-    border-radius: 6px;
-    font-size: 15px;
-    background: #F8F8F8;
-    color: #573B02;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    &.active{
-      background: transparent linear-gradient(40deg, #8C5F06 0%, #B48018 100%) 0% 0% no-repeat padding-box;
-      color: #fff;
-    }
-  }
-}
-.card-title{
-  font-size: 16px;
-  color: #816C4B;
-  padding: 0.5rem 1rem;
-  margin-bottom: -1rem;
-  position: relative;
-  &::before{
-    content: '';
-    position: absolute;
-    left: 0;
-    top: 5px;
-    width: 5px;
-    height: 23px;
-    background: #FFDE00;
-  }
-}
-.text-dark{
-  color: #573B02 !important;
-}
-
-#showImgModal .modal-body{
-  max-height: calc(100vh - 48px);
-  height: calc(100vh - 48px);
-}
-.bs-tooltip-bottom .tooltip-arrow::before, .bs-tooltip-auto[data-popper-placement^="bottom"] .tooltip-arrow::before{
-  border-bottom-color: #000;
-}
-.btn-gray.active{
-  border: 1px solid #067B0F;
-}
-.toast{
-  border: none;
-}
-.deco-icon{
-  position: absolute;
-  height: 16px;
-  width: 5px;
-  background: #FFDE00;
-  left: 0;
-}
-.custom-ticket{
-  flex-shrink: 0;
-  width: 88px;
-  border-left: 1px dashed #dedede;
-  background: #fff;
-  border-radius: 10px;
-}
-.upload-img-el{
-  width: 90px;
-  height: 50px;
-}
-.msg-card{
-  position: relative;
-  &::before{
-    content: '';
-    position: absolute;
-    width: 10px;
-    height: 10px;
-    background: $red;
-    border-radius: 100px;
-    top: 5px;
-    left: 5px;
-  }
-  &.msg-card-readed{
-    opacity: 0.5;
-    &::before{
-      display: none;
-    }
-  }
-}
-
-.text-line-clamp{
-  width: 300px;
-  word-break:keep-all;
-  white-space:nowrap;
-  overflow:hidden;
-  text-overflow:ellipsis;
-  color: #575757 !important;
-}
-
-.text-gray62{
-  color: #626262;
-}
-.text-gray2e{
-  color: #2e2e2e;
-}
-
-.time-filter-btns{
-  .btn-gray.active{
-    background: $primary !important;
-    color: $white !important;
-    border: none !important;
-  }
-}
+@import "components/utilities";
