--- a/scss/components/_form.scss
+++ b/scss/components/_form.scss
@@ -74,3 +74,53 @@ input:read-only:focus {
 input#Bank{
   background-color: #f5f5f5 !important;
 }
+
+.form-control:focus{
+  border: 1px solid $primary !important;
+}
+
+.input-suffix-text{
+  position: absolute;
+    right: 5px;
+    background: #fff;
+    height: 34px;
+    top: 5px;
+    border: 1px solid $primary;
+    color: $primary;
+    border-radius: 4px !important;
+    z-index: 10;
+}
+
+.form-switch{
+  padding: 0 !important;
+  padding-right: 2.5rem !important;
+}
+.form-check .form-check-input{
+  float: right;
+  margin-left: 0;
+  margin-right: -2.5rem;
+  transform: translateY(2px);
+  background-color: #ebebeb;
+  border: none !important;
+  &.radio-input{
+    background-color: $primary;
+  }
+}
+.form-switch .form-check-input:checked{
+  background-color: #f1dcb7;
+}
+input:-webkit-autofill{
+  -webkit-box-shadow: 0 0 0 30px #F5F5F5 inset;
+}
+.form-label{
+  margin-bottom: 2px;
+  margin-left: 2px;
+  color: #2E2E2E;
+  span{
+    color: red;
+  }
+}
+.invalid-feedback{
+  font-size: 12px;
+  color: red;
+}
