perf: index page style

--- a/assets/css/all.css
+++ b/assets/css/all.css
@@ -13506,4 +13506,16 @@ body {
 .text-gray2e {
   color: #2e2e2e;
 }
+
+.text-gray95 {
+  color: #959595;
+}
+
+.text-black-33 {
+  color: #333;
+}
+
+.text-black-4a {
+  color: #4a4a4a;
+}
 /*# sourceMappingURL=all.css.map */
