--- a/scss/components/_utilities.scss
+++ b/scss/components/_utilities.scss
@@ -21,3 +21,12 @@
 .text-gray2e {
   color: #2e2e2e;
 }
+.text-gray95 {
+  color: #959595;
+}
+.text-black-33 {
+  color: #333;
+}
+.text-black-4a {
+  color: #4a4a4a;
+}
