--- a/assets/css/all.css
+++ b/assets/css/all.css
@@ -12933,6 +12933,11 @@ body {
   border: none !important;
 }
 
+.btn-outline-primary {
+  color: #573b02;
+  border: 1px solid #8c5f06;
+}
+
 .toast-container {
   z-index: 1080;
 }
@@ -13141,9 +13146,20 @@ body {
   background-image: url("../../assets/img/account-bg.svg");
   background-color: #fff;
   border-radius: 0 0 8px 8px;
-  -webkit-box-shadow: 0px 3px 6px #8C5F0633;
-          box-shadow: 0px 3px 6px #8C5F0633;
+  -webkit-box-shadow: 0px 3px 6px #8c5f0633;
+          box-shadow: 0px 3px 6px #8c5f0633;
   background-size: contain;
+  position: relative;
+}
+
+.vip-info-wrap::after {
+  width: 100%;
+  height: 100px;
+  background: #fff;
+  position: absolute;
+  content: "";
+  z-index: -1;
+  top: -30px;
 }
 
 .vip-info-wrap .info-header {
@@ -13182,7 +13198,7 @@ body {
 }
 
 .vip-info-wrap .info-progress .now-level::after {
-  content: '當前等級';
+  content: "當前等級";
   position: absolute;
   width: 50px;
   top: 100%;
@@ -13196,7 +13212,7 @@ body {
 }
 
 .vip-info-wrap .info-progress .next-level::after {
-  content: '下一等級';
+  content: "下一等級";
   position: absolute;
   width: 50px;
   top: 100%;
@@ -13219,6 +13235,7 @@ body {
   background: #fff;
   -webkit-box-shadow: 0px 3px 6px #00000029;
           box-shadow: 0px 3px 6px #00000029;
+  border-left: 1px solid #fff;
 }
 
 .vip-info-wrap .info-progress .vip-progress-bar .progress-persent {
@@ -13228,8 +13245,8 @@ body {
   border-radius: 10px;
   top: 1px;
   width: 10%;
-  background: transparent -webkit-gradient(linear, left top, left bottom, from(#816C4B), to(#BEA276)) 0% 0% no-repeat padding-box;
-  background: transparent linear-gradient(180deg, #816C4B 0%, #BEA276 100%) 0% 0% no-repeat padding-box;
+  background: transparent -webkit-gradient(linear, left top, left bottom, from(#816c4b), to(#bea276)) 0% 0% no-repeat padding-box;
+  background: transparent linear-gradient(180deg, #816c4b 0%, #bea276 100%) 0% 0% no-repeat padding-box;
 }
 
 .vip-info-wrap .bet-info-wrap {
@@ -13257,8 +13274,8 @@ body {
   margin: 15px;
   height: 83px;
   background: #fff;
-  -webkit-box-shadow: 0px 3px 6px #8C5F0633;
-          box-shadow: 0px 3px 6px #8C5F0633;
+  -webkit-box-shadow: 0px 3px 6px #8c5f0633;
+          box-shadow: 0px 3px 6px #8c5f0633;
   border-radius: 6px;
   padding: 16px;
   display: -webkit-box;
@@ -13327,8 +13344,8 @@ body {
 }
 
 .account-list-container .card {
-  -webkit-box-shadow: 0px 3px 6px #8C5F0633;
-          box-shadow: 0px 3px 6px #8C5F0633;
+  -webkit-box-shadow: 0px 3px 6px #8c5f0633;
+          box-shadow: 0px 3px 6px #8c5f0633;
   border: none;
   border-radius: 0.5rem;
 }
@@ -13340,8 +13357,7 @@ body {
 
 .account-list-container .account-list-txt {
   font-size: 14px;
-  color: #4A4A4A !important;
-  font-weight: 300;
+  color: #4a4a4a !important;
 }
 
 .vip-progress-container {
@@ -13371,7 +13387,7 @@ body {
   height: 20px;
   font-size: 12px;
   color: #fff;
-  background: #BEBEBE;
+  background: #bebebe;
   border-radius: 100px;
   margin-right: 60px;
   -ms-flex-negative: 0;
@@ -13386,7 +13402,7 @@ body {
       -ms-flex-pack: center;
           justify-content: center;
   position: relative;
-  border: 1px solid #BEBEBE;
+  border: 1px solid #bebebe;
 }
 
 .vip-progress-container .vip-line-wrap .vip-line-item.active {
@@ -13394,12 +13410,12 @@ body {
 }
 
 .vip-progress-container .vip-line-wrap .vip-line-item::after {
-  content: '';
+  content: "";
   position: absolute;
   width: 60px;
   top: 50%;
   right: -60px;
-  background: #BEBEBE;
+  background: #bebebe;
   height: 1px;
 }
 
