--- a/scss/pages/_account.scss
+++ b/scss/pages/_account.scss
@@ -1,31 +1,41 @@
-.vip-info-wrap{
+.vip-info-wrap {
   width: 100%;
   background-repeat: no-repeat;
-  background-image: url('../../assets/img/account-bg.svg');
+  background-image: url("../../assets/img/account-bg.svg");
   background-color: #fff;
-  border-radius: 0 0 8px 8px ;
-  box-shadow: 0px 3px 6px #8C5F0633;
+  border-radius: 0 0 8px 8px;
+  box-shadow: 0px 3px 6px #8c5f0633;
   background-size: contain;
-  .info-header{
+  position: relative;
+  &::after {
+    width: 100%;
+    height: 100px;
+    background: #fff;
+    position: absolute;
+    content: "";
+    z-index: -1;
+    top: -30px;
+  }
+  .info-header {
     display: flex;
     align-items: center;
     justify-content: space-between;
     padding-left: 15px;
     transform: translateY(-12px);
-    .header-title{
+    .header-title {
       color: $primary;
       font-weight: 700;
     }
   }
-  .info-progress{
+  .info-progress {
     margin-top: -6px;
     display: flex;
     align-items: center;
     padding: 0 10px;
-    .now-level{
+    .now-level {
       position: relative;
-      &::after{
-        content: '當前等級';
+      &::after {
+        content: "當前等級";
         position: absolute;
         width: 50px;
         top: 100%;
@@ -34,10 +44,10 @@
         color: $primary;
       }
     }
-    .next-level{
+    .next-level {
       position: relative;
-      &::after{
-        content: '下一等級';
+      &::after {
+        content: "下一等級";
         position: absolute;
         width: 50px;
         top: 100%;
@@ -46,34 +56,36 @@
         color: $primary;
       }
     }
-    img{
+    img {
       flex-shrink: 0;
       position: relative;
-      
     }
-    .vip-progress-bar{
+    .vip-progress-bar {
       width: 100%;
       height: 10px;
       position: relative;
       border-radius: 10px;
       background: #fff;
       box-shadow: 0px 3px 6px #00000029;
-      .progress-persent{
+      border-left: 1px solid #fff;
+      .progress-persent {
         height: 8px;
         position: absolute;
         left: 0px;
         border-radius: 10px;
         top: 1px;
         width: 10%;
-        background: transparent linear-gradient(180deg, #816C4B 0%, #BEA276 100%) 0% 0% no-repeat padding-box;
+        background: transparent
+          linear-gradient(180deg, #816c4b 0%, #bea276 100%) 0% 0% no-repeat
+          padding-box;
       }
     }
   }
-  .bet-info-wrap{
+  .bet-info-wrap {
     margin: 0 15px;
     margin-top: 26px;
     border-top: 1px #fff solid;
-    .bet-header{
+    .bet-header {
       display: flex;
       align-items: center;
       justify-content: space-between;
@@ -82,42 +94,42 @@
       color: #717171;
     }
   }
-  .wallet-info-wrap{
+  .wallet-info-wrap {
     margin: 15px;
     height: 83px;
     background: #fff;
-    box-shadow: 0px 3px 6px #8C5F0633;
+    box-shadow: 0px 3px 6px #8c5f0633;
     border-radius: 6px;
     padding: 16px;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    .wallet-top{
+    .wallet-top {
       width: 100%;
       display: flex;
       align-items: center;
-      .pig-icon{
+      .pig-icon {
         width: 24px;
         height: 24px;
-        background-image: url('../../assets/img/pig-icon.png');
+        background-image: url("../../assets/img/pig-icon.png");
         background-size: contain;
       }
-      div{
+      div {
         color: #717171;
         font-size: 12px;
       }
     }
-    .wallet-bottom{
+    .wallet-bottom {
       display: flex;
       width: 100%;
       align-items: center;
-      .money-icon{
+      .money-icon {
         width: 24px;
         height: 24px;
-        background-image: url('../../assets/img/money-icon.png');
+        background-image: url("../../assets/img/money-icon.png");
         background-size: contain;
       }
-      div{
+      div {
         color: #717171;
         font-size: 12px;
       }
@@ -125,34 +137,34 @@
   }
 }
 
-.actions-btns-wrap{
-  .btn-txt{
+.actions-btns-wrap {
+  .btn-txt {
     color: #717171;
     margin-top: -8px;
   }
 }
 
-.account-list-container{
+.account-list-container {
   margin-bottom: 10px;
-  .card{
-    box-shadow: 0px 3px 6px #8C5F0633;
+  .card {
+    box-shadow: 0px 3px 6px #8c5f0633;
     border: none;
     border-radius: 0.5rem;
   }
-  .account-list-icon{
+  .account-list-icon {
     width: 20px;
     height: 20px;
   }
-  .account-list-txt{
+  .account-list-txt {
     font-size: 14px;
-    color: #4A4A4A !important;
-    font-weight: 300;
+    color: #4a4a4a !important;
+    // font-weight: 500;
   }
 }
 
-.vip-progress-container{
+.vip-progress-container {
   margin-top: 16px;
-  .vip-line-wrap{
+  .vip-line-wrap {
     display: flex;
     align-items: center;
     justify-content: flex-start;
@@ -161,12 +173,12 @@
     &::-webkit-scrollbar {
       display: none;
     }
-    .vip-line-item{
+    .vip-line-item {
       width: 33px;
       height: 20px;
       font-size: 12px;
       color: #fff;
-      background: #BEBEBE;
+      background: #bebebe;
       border-radius: 100px;
       margin-right: 60px;
       flex-shrink: 0;
@@ -174,30 +186,29 @@
       align-items: center;
       justify-content: center;
       position: relative;
-      border: 1px solid #BEBEBE;
-      &.active{
+      border: 1px solid #bebebe;
+      &.active {
         background-color: $primary;
       }
-      &::after{
-        content: '';
+      &::after {
+        content: "";
         position: absolute;
         width: 60px;
         top: 50%;
         right: -60px;
-        background: #BEBEBE;
+        background: #bebebe;
         height: 1px;
       }
-      &:nth-child(5){
+      &:nth-child(5) {
         margin-right: 10px;
-        
       }
-      &:nth-child(5)::after{
+      &:nth-child(5)::after {
         width: 0;
       }
     }
   }
 
-  .vip-card-wrap{
+  .vip-card-wrap {
     display: flex;
     align-items: center;
     justify-content: flex-start;
@@ -207,40 +218,37 @@
     &::-webkit-scrollbar {
       display: none;
     }
-    .vip-card-item{
+    .vip-card-item {
       width: 263px;
       flex-shrink: 0;
       margin-right: 21px;
     }
   }
-  
 }
 
-.vip-desc-item{
+.vip-desc-item {
   width: 95px;
   margin-bottom: 20px;
   display: flex;
 
-  .vip-item-box{
+  .vip-item-box {
     width: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    .back-num{
+    .back-num {
       color: $primary;
       font-weight: 700;
       font-size: 18px;
-      span{
+      span {
         font-size: 12px;
       }
     }
-    .third{
+    .third {
       color: #717171;
       font-size: 12px;
       font-weight: 700;
     }
   }
 }
-
-
