--- a/scss/components/_form.scss
+++ b/scss/components/_form.scss
@@ -1,69 +1,73 @@
 // @import "../helpers/variables";
 input.is-invalid {
-    border: $danger solid $border-width;
-    #count_message{
-      bottom: 24px !important;
-    }
+  border: $danger solid $border-width;
+  #count_message {
+    bottom: 24px !important;
+  }
 }
 
 .checkEye {
-    position: absolute;
-    top: 67%;
-    right: 20px;
-    transform: translateY(-50%);
-    z-index: 10;
-    cursor: pointer;
-    &.is-invalid {
-        top: 50%;
-    }
-    img {
-        min-height: 24px;
-        width: 20px;
-    }
+  position: absolute;
+  top: 67%;
+  right: 20px;
+  transform: translateY(-50%);
+  z-index: 10;
+  cursor: pointer;
+  &.is-invalid {
+    top: 50%;
+  }
+  img {
+    min-height: 24px;
+    width: 20px;
+  }
 }
 
 .checkImg {
-    width: 90px;
-    height: 30px;
-    position: absolute;
-    top: 67%;
-    right: 20px;
-    transform: translateY(-50%);
-    z-index: 10;
-    cursor: pointer;
-    &.is-invalid {
-        top: 50%;
-    }
+  width: 90px;
+  height: 30px;
+  position: absolute;
+  top: 67%;
+  right: 20px;
+  transform: translateY(-50%);
+  z-index: 10;
+  cursor: pointer;
+  &.is-invalid {
+    top: 50%;
+  }
 }
 .sendMobileOTP {
-    position: absolute;
-    top: 67%;
-    right: 20px;
-    transform: translateY(-50%);
-    color: $primary !important;
-    font-size: $font-size-sm;
-    z-index: 10;
-    cursor: pointer;
-    &.is-invalid {
-        top: 50%;
-    }
+  position: absolute;
+  top: 67%;
+  right: 20px;
+  transform: translateY(-50%);
+  color: $primary !important;
+  font-size: $font-size-sm;
+  z-index: 10;
+  cursor: pointer;
+  &.is-invalid {
+    top: 50%;
+  }
 }
 .radio-icon-check {
-    img {
-        display: none;
-    }
+  img {
+    display: none;
+  }
 }
-.btn-check:checked + .radio-icon-check, .btn-check:active + .radio-icon-check, .radio-icon-check:active, .radio-icon-check.active, .show > .radio-icon-check.dropdown-toggle{
-    img {
-        display: inline;
-    }
+.btn-check:checked + .radio-icon-check,
+.btn-check:active + .radio-icon-check,
+.radio-icon-check:active,
+.radio-icon-check.active,
+.show > .radio-icon-check.dropdown-toggle {
+  img {
+    display: inline;
+  }
 }
 input:read-only:focus {
-    box-shadow: none;
+  box-shadow: none;
 }
-.remove-img-btn{
+.remove-img-btn {
   position: absolute;
-  background-image: url('../../assets/img/remove-img-btn.svg');
+  background-image: url("../../assets/img/remove-img-btn.svg");
   width: 18px;
   height: 18px;
   background-size: contain;
@@ -71,56 +75,60 @@ input:read-only:focus {
   top: 20px;
   right: -5px;
 }
-input#Bank{
+input#Bank {
   background-color: #f5f5f5 !important;
 }
 
-.form-control:focus{
+.form-control:focus {
   border: 1px solid $primary !important;
 }
 
-.input-suffix-text{
+.input-suffix-text {
   position: absolute;
-    right: 5px;
-    background: #fff;
-    height: 34px;
-    top: 5px;
-    border: 1px solid $primary;
-    color: $primary;
-    border-radius: 4px !important;
-    z-index: 10;
+  right: 5px;
+  background: #fff;
+  height: 34px;
+  top: 5px;
+  border: 1px solid $primary;
+  color: $primary;
+  border-radius: 4px !important;
+  z-index: 10;
 }
 
-.form-switch{
+.form-switch {
   padding: 0 !important;
   padding-right: 2.5rem !important;
 }
-.form-check .form-check-input{
+.form-check .form-check-input {
   float: right;
   margin-left: 0;
   margin-right: -2.5rem;
   transform: translateY(2px);
   background-color: #ebebeb;
   border: none !important;
-  &.radio-input{
+  &.radio-input {
     background-color: $primary;
   }
 }
-.form-switch .form-check-input:checked{
+.form-switch .form-check-input:checked {
   background-color: #f1dcb7;
 }
-input:-webkit-autofill{
-  -webkit-box-shadow: 0 0 0 30px #F5F5F5 inset;
+input:-webkit-autofill {
+  -webkit-box-shadow: 0 0 0 30px #f5f5f5 inset;
 }
-.form-label{
+.form-label {
   margin-bottom: 2px;
   margin-left: 2px;
-  color: #2E2E2E;
-  span{
+  font-size: 13px;
+  color: #2e2e2e;
+  span {
     color: red;
   }
 }
-.invalid-feedback{
+.invalid-feedback {
   font-size: 12px;
   color: red;
+}
+.input-refresh-btn {
+  transform: translateX(9px);
 }
