--- a/assets/css/all.css
+++ b/assets/css/all.css
@@ -12525,11 +12525,10 @@ input:-webkit-autofill {
 
 .uploader {
   border-radius: 0.25rem;
-  border: dashed 1px #ced4da;
+  border: 1px dashed #bababa;
   width: 100%;
-  height: 160px;
-  background-color: #202326;
-  opacity: 0.5;
+  height: 120px;
+  opacity: 0.7;
 }
 
 .uploader img {
