--- a/scss/components/_custom.scss
+++ b/scss/components/_custom.scss
@@ -45,11 +45,10 @@ $nav-bottom-height: 50px;
 }
 .uploader {
   border-radius: $border-radius;
-  border: dashed 1px $gray-400;
+  border: 1px dashed #bababa;
   width: 100%;
-  height: 160px;
-  background-color: $gray-900;
-  opacity: 0.5;
+  height: 120px;
+  opacity: 0.7;
   img {
     width: 26px;
     height: 26px;
