perf: bank account page style

--- a/assets/css/all.css
+++ b/assets/css/all.css
@@ -12798,6 +12798,11 @@ body {
   color: #fff !important;
 }
 
+.canvas-option {
+  color: #2e2e2e !important;
+  border-bottom: 1px solid #e5e5e5;
+}
+
 .btn_active_teal {
   display: none;
 }
