--- a/scss/components/_offcanvas.scss
+++ b/scss/components/_offcanvas.scss
@@ -44,3 +44,7 @@ body {
     color: #fff !important;
   }
 }
+.canvas-option {
+  color: #2e2e2e !important;
+  border-bottom: 1px solid #e5e5e5;
+}
