--- a/scss/pages/_account.scss
+++ b/scss/pages/_account.scss
@@ -187,6 +187,7 @@
       justify-content: center;
       position: relative;
       border: 1px solid #bebebe;
+      transition: 0.5s;
       &.active {
         background-color: $primary;
       }
